testing event listener for button press

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     
     <link rel="stylesheet" href="/styles.css">
-    <script src="/index.js"></script> 
 </head>
 
 <body class="grid-container">
     <div class="grid-top-mid">
         <h1>Welcome to Gordon's Kitchen</h1>
+        <p>Click the button for a random Gordon quote</p>
     </div>
 
     <div class="grid-left-sidebar"></div>
@@ -20,13 +20,12 @@
 
     <div class="grid-center">
         <img src="/resources/img/red-button.png" alt="red-button" id="button">
-
-
     </div>
 
-    
 
+
+    <!-- include the javascript -->
+    <script src="/index.js"></script> 
 </body>
-
 
 </html>
