fixed relative file paths for github pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title> Hell's Kitchen</title>
     <meta name="description" content="">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body class="grid-container">
@@ -18,11 +18,11 @@
     <div class="grid-right-sidebar"></div>
 
     <div class="grid-center">
-        <img src="/resources/img/red-button.png" alt="red-button" id="button">
+        <img src="resources/img/red-button.png" alt="red-button" id="button">
     </div>
 
     <!-- include custom javascript and howler CDN -->
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.core.min.js" integrity="sha512-+wqa4/aOL4vwhL637A4p+6epqhUHDqpEfYJa1+PlzlMf908CSOb3xtIeKwZWh5Q0Q/R2nYUKxH4vvcQg+k8KKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.js" integrity="sha512-dMiBqqEV5i3KqpAdsgQSSZ72DnNib7otY0X+b/Tnn1EmLym1dxuZ19csdZqBnfDniKd9bmNtzStQzuMrIa5Ngw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
