cleaned up grid layout, setup relative positioning for the main content

--- a/index.html
+++ b/index.html
@@ -13,21 +13,34 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.spatial.min.js" integrity="sha512-bJ12cKgyPVNoCnZ6R7mGKMzsEpu2ROiWGyImoviSj/zE3jHS+xv5EiTIHM7HPjIk2/mD4TZMvqLpDiMgyAwdwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
-<body class="grid-container">
-    <div class="grid-top-mid">
-        <h1>Welcome to Gordon's Kitchen</h1>
-        <p>Click the button for a random Gordon quote</p>
+<body class="main-grid-container">
+    <div class="header">
+        <h1 class="text-outlined">
+            Welcome to Gordon's kitchen
+        </h1>
+        <h3 class="text-outlined">
+            Cook the steak to perfection!
+        </h3>
     </div>
 
-    <div class="grid-left-sidebar"></div>
+    <div class="main">
 
-    <div class="grid-right-sidebar"></div>
 
-    <div class="grid-center">
-        <img src="resources/img/red-button.png" alt="red-button" id="button">
-    </div>
+        <img src="resources/img/red-button.png" alt="red-button" id="button"> 
 
-    <!-- include custom javascript and howler CDN -->
+    </div>  
+
+
+    <footer class="footer"></footer>
+
+
+
+
+
+
+
+
+    <!-- include custom javascript -->
     <script src="script.js"></script>
 </body>
 
