--- a/index.html
+++ b/index.html
@@ -24,9 +24,19 @@
     </div>
 
     <div class="main">
+        <div class="meter-wrapper">
+            <img src="resources/img/temp-meter.png" alt="temp-meter" id="meter">
+            <img src="resources/img/meter-indicator.png" alt="meter-indicator" id="meter-indicator">  
+        </div>
 
 
+
+
+        <!--
+        
         <img src="resources/img/red-button.png" alt="red-button" id="button"> 
+        
+        -->
 
     </div>  
 
