--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
             <img src="resources/img/meter-indicator.png" alt="meter-indicator" id="meter-indicator">
         </div>
           
+        <img src="resources/img/red-button.png" alt="red-button" id="button"> 
+    </div> 
 
-           
 
-    </div>  
+    <div class="footer"></div>
 
 
 
