Refactor: reduced coupling between document elements and animation class

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     </div>
 
     <div class="main">
+
+        <!-- <div>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, quo magnam! Dolores temporibus repellendus suscipit asperiores animi hic quae corporis mollitia esse nesciunt facilis fugiat incidunt nobis, ducimus veritatis perferendis.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, quo magnam! Dolores temporibus repellendus suscipit asperiores animi hic quae corporis mollitia esse nesciunt facilis fugiat incidunt nobis, ducimus veritatis perferendis.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, quo magnam! Dolores temporibus repellendus suscipit asperiores animi hic quae corporis mollitia esse nesciunt facilis fugiat incidunt nobis, ducimus veritatis perferendis.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, quo magnam! Dolores temporibus repellendus suscipit asperiores animi hic quae corporis mollitia esse nesciunt facilis fugiat incidunt nobis, ducimus veritatis perferendis.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, quo magnam! Dolores temporibus repellendus suscipit asperiores animi hic quae corporis mollitia esse nesciunt facilis fugiat incidunt nobis, ducimus veritatis perferendis.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, quo magnam! Dolores temporibus repellendus suscipit asperiores animi hic quae corporis mollitia esse nesciunt facilis fugiat incidunt nobis, ducimus veritatis perferendis.
+        </div> -->
+
         <div id="meter-container">
             <img src="resources/img/meter-indicator.png" alt="meter-indicator" id="meter-indicator">
         </div>
