knob turns on click

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="resources/img/meter-indicator.png" alt="meter-indicator" id="meter-indicator">
         </div>
           
-        <img src="resources/img/knob.png" alt="red-button" id="button"> 
+        <img src="resources/img/knob-high.png" alt="red-button" id="button"> 
     </div> 
 
     <div class="footer"></div>
