new assets for stove, button, steak. General page layout chagned

--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
 <body class="main-grid-container">
     <div class="header">
         <h1 class="text-outlined">
-            Welcome to Gordon's kitchen
-        </h1>
-        <h3 class="text-outlined">
             Cook the steak to perfection!
-        </h3>
+        </h1>
     </div>
 
     <div class="main">
         <div id="meter-container">
             <img src="resources/img/order-ticket.png" alt="meter-indicator" id="order-ticket">
             <img src="resources/img/meter-indicator.png" alt="meter-indicator" id="meter-indicator">
+        </div>     
+
+        <div id="stove-container">
+            <img src="resources/img/pan.png" alt="meter-indicator" id="pan">
+            <img src="resources/img/steak-raw.png" alt="meter-indicator" id="steak">
+            <img src="resources/img/knob-high.png" alt="red-button" id="button">
         </div>
-          
-        <img src="resources/img/knob-high.png" alt="red-button" id="button"> 
     </div> 
 
     <div class="footer"></div>
