rebalanced meter speed and improved information text

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 <body class="main-grid-container">
     <div class="header">
         <h1 class="text-outlined">
-            Cook the steak to perfection!
+            Gordon needs perfectly cooked steaks!
         </h1>
+        <p class="text-outlined"> Turn off the burner when the indicator aligns with the red pin on the order ticket!</p>
     </div>
 
     <div class="main">
