favicon link in index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title> Hell's Kitchen</title>
     <meta name="description" content="">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
