--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
             <img src="resources/img/knob-high.png" alt="red-button" id="button">
         </div>
     </div> 
-
-    <div class="footer"></div>
-
+    
     <!-- include custom javascript -->
-    <script src="script.js"></script>
+    <script src="scripts/meter-game.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
