randomized sound clips

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
             <img src="resources/img/knob-high.png" alt="red-button" id="button">
         </div>
     </div> 
-    
+
     <!-- include custom javascript -->
     <script src="scripts/meter-game.js"></script>
+    <script src="scripts/sounds.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 
