preloaded steak images and show/hide depending on meter level

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
 
         <div id="stove-container">
             <img src="resources/img/pan.png" alt="pan" id="pan">
-            <img src="resources/img/steak-raw.png" alt="steak-raw" id="steak">
+
+            <img class="steak" src="resources/img/steak-raw.png" alt="steak-raw" id="steak-raw">
+            <img class="steak" src="resources/img/steak-med.png" alt="steak-med" id="steak-med">
+            <img class="steak" src="resources/img/steak-well.png" alt="steak-well" id="steak-well">
+
             <img src="resources/img/knob-high.png" alt="knob-high" id="button">
         </div>
     </div>
