change gordon sprite depending on win/loss

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="right">
         <div id="score-container">
-            <img src="resources/img/gordon.png" alt="Ramsay" id="gordon">  
+            <img src="resources/img/nightmareramsay.png" alt="Ramsay-chill" id="gordon">
             <div id="score-board">
                 <h1 class="text-outlined">Current Streak: <h1 id="streak">0</h1></h1>
                 <h1 class="text-outlined">Highest: <h1 id="high-score">0</h1></h1>
